Change API by accept value parameter before the field name (#8)